<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fragment_filter_hours_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/select_a_range_of_hours"
        style="@style/Title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_filter_hours_cl_minimal_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/fragment_filter_hours_tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- TEXT VIEW -->

        <TextView
            android:id="@+id/fragment_filter_hours_tv_minimal_hour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_filter_hours_b_minimal_hour"
            app:layout_constraintHorizontal_weight="@integer/value_1_percentage_horizontal_creation"
            android:text="@string/start_hour" />

        <!-- BUTTON -->

        <Button
            android:id="@+id/fragment_filter_hours_b_minimal_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_filter_hours_tv_minimal_hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="@integer/value_2_percentage_horizontal_creation"
            android:text="@string/initial_hour_of_text_view"
            style="@style/BasicButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_filter_hours_cl_maximal_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@id/fragment_filter_hours_cl_minimal_hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- TEXT VIEW -->

        <TextView
            android:id="@+id/fragment_filter_hours_tv_maximal_hour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_filter_hours_b_maximal_hour"
            app:layout_constraintHorizontal_weight="@integer/value_1_percentage_horizontal_creation"
            android:text="@string/end_hour" />

        <!-- BUTTON -->

        <Button
            android:id="@+id/fragment_filter_hours_b_maximal_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_filter_hours_tv_maximal_hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="@integer/value_2_percentage_horizontal_creation"
            android:text="@string/final_hour_of_text_view"
            style="@style/BasicButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/fragment_filter_hours_b_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/filter_by_hours"
        style="@style/FilledButton" />

</androidx.constraintlayout.widget.ConstraintLayout>